// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CookiesBar component should render a bar with 2 buttons to accept the cookies policy or read them 1`] = `
<div
  className="cookies-bar-wrapper show-cookies-bar"
>
  <div
    className="cookies-bar"
  >
    <span
      className="cookies-text"
    >
      Assembl uses cookies to offer you the best possible experience. To use Assembl, you have to agree to the cookies policy of the debate.
    </span>
    <div
      className="cookies-buttons-container"
    >
      <button
        className="button-submit button-dark cookies-button btn btn-default"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        <span>
          I agree
        </span>
      </button>
      <a
        onClick={[Function]}
        style={Object {}}
      >
        <button
          className="button-submit button-dark cookies-button btn btn-default"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          <span>
            See more
          </span>
        </button>
      </a>
    </div>
  </div>
</div>
`;

exports[`CookiesBar component should render a hidden bar if all or some cookies have been accepted by the user 1`] = `
<div
  className="cookies-bar-wrapper hide-cookies-bar"
>
  <div
    className="cookies-bar"
  >
    <span
      className="cookies-text"
    >
      Assembl uses cookies to offer you the best possible experience. To use Assembl, you have to agree to the cookies policy of the debate.
    </span>
    <div
      className="cookies-buttons-container"
    >
      <button
        className="button-submit button-dark cookies-button btn btn-default"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        <span>
          I agree
        </span>
      </button>
      <a
        onClick={[Function]}
        style={Object {}}
      >
        <button
          className="button-submit button-dark cookies-button btn btn-default"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          <span>
            See more
          </span>
        </button>
      </a>
    </div>
  </div>
</div>
`;
